gcc-14.2.0/gcc/testsuite/gdc.test/compilable/extra-files/pkgDIP37/test17629/package.di
version https://git-lfs.github.com/spec/v1
oid sha256:cfd478d53dc5c9a0f74b4a903bff3fe24b6422c1b013630a3a65de4881bdff64
size 68
