gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test5412c2.di
version https://git-lfs.github.com/spec/v1
oid sha256:9aba282841e68d7439354c5e872e8406835c9f9b3d99bbd44f95a1c609dde58b
size 19
